--- a/css/style.css
+++ b/css/style.css
@@ -2,68 +2,51 @@
 # General
 --------------------------------------------------------------*/
 body {
-    font-family: "Open Sans", sans-serif;
-    overflow-x: hidden;
-    color: #444444;
-  }
+  font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
+  color: #444444;
+}
   
-  a {
-    color: #2487ce;
-  }
+a {
+  color: #2487ce;
+}
   
-  a:hover {
-    color: #469fdf;
-    text-decoration: none;
-  }
+a:hover {
+  color: #469fdf;
+  text-decoration: none;
+}
   
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway", sans-serif;
-  }
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway", sans-serif;
+}
 
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
-    transition: all 0.5s;
-    background: #fff;
-    z-index: 997;
-    padding: 15px 0;
-    border-bottom: 1px solid #e6f2fb;
-  }
+  padding: 20px 100px 15px;
+  border-bottom: 1px solid #e6f2fb;
+}
   
-  #header.header-scrolled {
-    border-color: #fff;
-    box-shadow: 0px 2px 15px rgba(18, 66, 101, 0.08);
-  }
+#header .title {
+  float: left;
+  font-size: 28px;
+  margin: 0;
+  padding: 0;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-family: "Poppins", sans-serif;
+}
   
-  #header .logo {
-    font-size: 28px;
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    font-weight: 300;
-    letter-spacing: 0.5px;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  #header .logo a {
-    color: #16507b;
-  }
-  
-  #header .logo img {
-    max-height: 40px;
-  }
-  
-  @media (max-width: 992px) {
-    #header .logo {
-      font-size: 28px;
-    }
-  }
+#header .title a {
+  color: #16507b;
+}
 
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
-.nav-menu ul {
+
+  .nav-menu ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -74,14 +57,11 @@ body {
   }
   
   .nav-menu > ul > li {
-    position: relative;
     white-space: nowrap;
     padding: 14px 0 14px 28px;
   }
   
   .nav-menu a {
-    display: block;
-    position: relative;
     color: #124265;
     transition: 0.3s;
     font-size: 14px;
@@ -91,68 +71,68 @@ body {
   .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
     color: #2487ce;
   }
-  
-  @media (max-width: 768px) {
-    .get-started-btn {
-      margin: 0 48px 0 0;
-      padding: 5px 18px 6px 18px;
-      border-radius: 3px;
-    }
+
+/*--------------------------------------------------------------
+# Carousel
+--------------------------------------------------------------*/
+
+  .carousel {
+    float: left;
+    text-align: center;
+    margin-left: 100px;
+    width: 45% !important;
+    height: 70vh;
   }
 
-.jumbotron {
-    text-align: center;
-    margin-top: 10px;
-    height: 200px;
-    color: white;
-    background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=1200:*");
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-}
+  .carousel-inner {
+    height: 100%;
+  }
 
-h1 {
-    font-family: 'Pacifico', cursive;
-    font-weight: bold;
-}
+  .item {
+    background-size: cover;
+    background-position: top center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .item img {
+    visibility: hidden;
+  }
+
+/*--------------------------------------------------------------
+###
+--------------------------------------------------------------*/
 
 h3 {
     font-family: 'Dancing Script', cursive;
     font-weight: bold;
-    text-align: center;
-}
-
-.three-box {
-    padding: 20px;
 }
 
 .box {
-    border: 10px;
-}
-
-img {
-    width: 356px;
-    height: 200px;
-}
-
-.input {
-    height: 50px;
+    float: left;
+    width: 45%;
+    padding-left: 15px;
+    padding-right: 100px;
 }
 
 .bot-btn {
     margin-right:20px;
 }
 
-.navbar {
-    padding-top: 25px;
-    position: relative;
-    width: 100%;
-    text-align: center;
+.footer {
+  position: absolute;
+  padding-left: 100px;
+  bottom: 0;
+  width: 100%;
 }
 
-.footer {
-    text-align: left;
-    bottom: 0;
-    width: 100%;
-    padding-bottom: 10px;
+.active-input-group {
+  float: left;
+}
+
+.input-group {
+  float: left;
+  white-space: nowrap;
+  padding-top: 15px;
+  padding-left: 50px;
 }
